[package]
name = "coffgp"
version = "0.1.0"
authors = ["Yaroslav Bolyukin <iam@lach.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap" }
coffeegrounds-core = { path = "../../crates/coffeegrounds-core" }
anyhow = "1.0.32"
